--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/35020c1f7f.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>сайт про космос</title>
@@ -9,19 +10,87 @@
 </head>
 <body>
     <header>
-        <img src="" alt="" class="logo">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSI7GCxakx0wX-Z--M-N8DWfi-mwQwOeYy1xA&s" alt="" class="logo">
         <nav>
-            <a href="">головна</a>
-            <a href="">інформація</a>
-            <a href="">допомога</a>
+            <a href="index.html">головна</a>
+            <a href="about us.html">інформація</a>
+            <a href="help.html">допомога</a>
+        </div>
         </nav>
     </header>
 
     <main>
-
+        <h1>
+            вітаюємо вас на нашому сайті про космос "spacelibrary" </h1>
+        <section class="catalog">
+            <div class="card">
+                <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQ9xnq2Iboz6MkNuQCmzo6VvF9x2wnqFr4rrvfgtkFy08ygX3mS8tvi8QCNXo4-vSlPgga4lXCQ0Wthsef5c05jJn6klLgbjsD5ZaHRu3g&usqp=CAE" alt="">
+                <div class="card-text">
+                    <p>Нічник проектор зіркового неба Астронавт, з пультом ДУ / Світлодіодний нічник / LED лампа</p>
+                    <p class="price">1199грн</p>
+                </div>
+            </div>
+    
+            <div class="card">
+                <img src="https://cdn.kasta.ua/image/1035/s3/9/95/169/6082409/16509854/16509854_retouched.jpeg" alt="">
+                <div class="card-text">
+                    <p>чашка хамелеон SOLAR SYSTEM, 8х9 см</p>
+                    <p class="price">399грн</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://content2.rozetka.com.ua/goods/images/big/341161335.jpg" alt="">
+                <div class="card-text">
+                    <p>Килимок для мишки SHLab Зоряна Галактика (70x30 см)</p>
+                    <p class="price">299грн</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://img.joomcdn.net/c1d8406f5bb5af836ca6ddef8f3704e7e0bb9b5e_original.jpeg" alt="">
+                <div class="card-text">
+                    <p>Світлова Планета Зірка Брілок</p>
+                    <p class="price">79грн</p>
+                </div>
+            </div>  <div class="card">
+                <img src="https://skyprint.net.ua/public/upload/products/classic_black/classic_black_22.jpg" alt="">
+                <div class="card-text">
+                    <p>зіркова карта</p>
+                    <p class="price">340грн</p>
+                </div>
+            </div>  <div class="card">
+                <img src="https://images.prom.ua/6291648441_w640_h640_6291648441.jpg" alt="">
+                <div class="card-text">
+                    <p>планети сонячної системи</p>
+                    <p class="price">559грн</p>
+                </div>
+            </div>  <div class="card">
+                <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSOxk63arkXBWf4w68o_HV0uvIfQ7yaQQVgQUofew5lH8gk81YB3l7OWg_9VScsEvGN_Hakr4If5qINVl1YyldLBtDpx8-0wDKEsF-l6lF3G8FCapYIZoNg&usqp=CAE" alt="">
+                <div class="card-text">
+                    <p>нічник в вигляді планети</p>
+                    <p class="price">479грн</p>
+                </div>
+            </div>  <div class="card">
+                <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcQ6wfNHCz2wuubnXr8m4SlScny6oLfQfn-aFQ7L0KrVkY8FUrQZxt8f_sYUQtmbvxeH5h5v8hZCZxSS9WBth5xa6gTD3SVd8Q&usqp=CAE" alt="">
+                <div class="card-text">
+                    <p>Космічний шатл LEGO ICONS </p>
+                    <p class="price">8699грн</p>
+                </div>
+            </div>
     </main>
     <footer>
-
+        <div class="contacts">
+            <p>Контакти</p>
+            <p>📞 Телефон: +380 53 425 517</p>
+            <p>📧 Email:support@spacelibrarystore.com</p>
+            <p>🏢 Адреса: м. Київ, вул. Модна, 12</p>
+          </div>
+          <div class="links">
+            <p>Корисні посилання</p>
+            <p>Доставка і оплата</p>
+            <p>Повернення та обмін</p>
+            <p>Політика конфіденційності</p>
+            <p>Часті запитання (FAQ)</p>
+          </div>
     </footer>
 </body>
 </html>
