--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <header>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSI7GCxakx0wX-Z--M-N8DWfi-mwQwOeYy1xA&s" alt="" class="logo">
         <nav>
-            <a href="index.html">головна</a>
-            <a href="about us.html">інформація</a>
-            <a href="help.html">допомога</a>
+            <a href="index.html">Головна</a>
+            <a href="about us.html">Інформація</a>
+            <a href="help.html">Допомога</a>
+            <a href="cart.html">Корзина</a>
         </div>
         </nav>
     </header>
@@ -85,11 +86,11 @@
             <p>🏢 Адреса: м. Київ, вул. Модна, 12</p>
           </div>
           <div class="links">
-            <p>Корисні посилання</p>
-            <p>Доставка і оплата</p>
-            <p>Повернення та обмін</p>
-            <p>Політика конфіденційності</p>
-            <p>Часті запитання (FAQ)</p>
+            <a href="#">Корисні посилання</a>
+            <a href="#">Доставка і оплата</a>
+            <a href="#">Повернення та обмін</a>
+            <a href="#">Політика конфіденційності</a>
+            <a href="#">Часті запитання (FAQ)</a>
           </div>
     </footer>
 </body>
