--- a/about us.html
+++ b/about us.html
@@ -21,6 +21,10 @@
 
     <main>
 <p>тут можна буде в подальшому дізнатися більше інформації про нас</p>
+    це наш невиличкий магазин повязаний з космосам який в подальшому часі буде мати все більше товарів </p>
+    <p>а також ви можете подати нам свої ідеї</p>
+    <img src="https://img.goodfon.ru/wallpaper/big/8/3a/luna-kosmos-kosmonavt.webp" alt="">
+    </main>
     </main>
     <footer>
         <div class="contacts">
