--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSI7GCxakx0wX-Z--M-N8DWfi-mwQwOeYy1xA&s" alt="" class="logo">
         <nav>
             <a href="index.html">Головна</a>
-            <a href="about us.html">Інформація</a>
+            <a href="about us.html">про нас</a>
             <a href="help.html">Допомога</a>
             <a href="cart.html">Корзина</a>
         </div>
