--- a/help.html
+++ b/help.html
@@ -23,7 +23,7 @@
        <p>якщо вам пригодиться допомога при замолені товари чи чогось іншого дайте нам знати написавши нам на пошту або подзвонити
         наші оператори завжли готові допомогти вам 
        </p>
-       <p>наші оператори завжди готові допомогти вам навіть у таких ситуаціях</p>
+       <p>наші оператори завжди готові допомогти вам в любій ситуації</p>
        <img src="https://png.pngtree.com/background/20230625/original/pngtree-d-illustration-design-of-astronaut-making-a-telephone-gesture-with-vintage-picture-image_4044050.jpg">
     </main>
     <footer>
